@@ -5,6 +5,10 @@
 2011-09-07 erra <erra@ya.ru>
 	* common/send.c: подмена цветного сообщения в QUIT для каналов
 			в режиме +c
+	* ircd/res.c: защита idn от некорректного высвобождения; ещё пару строк
+			отладочной информации; нечувствительный к регистру
+			символов поиск IDN-кода (XN--)
+	* ircd/s_bsd.c: защита от ошибки сегментирования в отсутствие строки M:
 
 2011-09-06 erra <erra@ya.ru>
 	* ircd/s_user.c: режим +I для пользователя разрешён только
