@@ -2,6 +2,9 @@ Version 2.0
 --------------
 2011-09-07 erra <erra@ya.ru>
 	* common/send.c: forced message in QUIT for colorless channels
+	* ircd/res.c: idn guarded against wrong freeing; more debug info;
+		strcasestr to catch XN-- in uppercase
+	* ircd/s_bsd.c: guard against sig11 because of undefined M:line
 
 2011-09-06 erra <erra@ya.ru>
 	* ircd/s_user.c: only allow umode +I via SVSMODE
